--- a/assets/search/user/result.ejs
+++ b/assets/search/user/result.ejs
@@ -3,6 +3,6 @@
 </h4>
 
 <p class="list-group-item-text">
-    /r/PokemonTrades: {{result.flair.ptrades.flair_text}}<br />
+    /r/pokemontrades: {{result.flair.ptrades.flair_text}}<br />
     /r/SVExchange: {{result.flair.svex.flair_text}}
 </p>
