--- a/assets/views/home/flairApply.ejs
+++ b/assets/views/home/flairApply.ejs
@@ -14,7 +14,7 @@
                 <h3>/r/pokemontrades</h3>
                 <div class="list-group col-md-6">
                     <h4>Trader</h4>
-                    <a ng-repeat="flair in flairs | filter:inPokemonTradesTrader | orderBy: 'trades' track by flair.id"
+                    <a ng-repeat="flair in flairs | filter:inpokemontradesTrader | orderBy: 'trades' track by flair.id"
                        class="list-group-item" ng-class="[canUserApply(flair) ? '' : 'disabled',
                  (selectedFlair === flair.name) ? 'active' : '']"
                        href="#" ng-click="setSelectedFlair(flair.name, canUserApply(flair))" title={{formattedRequirements(flair.name)}}>
@@ -23,7 +23,7 @@
                 </div>
                 <div class="list-group col-md-6">
                     <h4>Helper</h4>
-                    <a ng-repeat="flair in flairs | filter:inPokemonTradesHelper | orderBy: 'involvement' track by flair.id"
+                    <a ng-repeat="flair in flairs | filter:inpokemontradesHelper | orderBy: 'involvement' track by flair.id"
                        class="list-group-item" ng-class="[canUserApply(flair) ? '' : 'disabled',
                  (selectedFlair === flair.name) ? 'active' : '']"
                        href="#" ng-click="setSelectedFlair(flair.name, canUserApply(flair))" title={{formattedRequirements(flair.name)}}>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="col-md-6">
-                <h3>/r/svexchange</h3>
+                <h3>/r/SVExchange</h3>
                 <div class="list-group col-md-6">
                     <h4>Hatcher</h4>
                     <a ng-repeat="flair in flairs | filter:inSVExchangeHatcher | orderBy: 'eggs' track by flair.id"
