--- a/assets/views/home/flairMod.ejs
+++ b/assets/views/home/flairMod.ejs
@@ -45,11 +45,11 @@
                 </div>
                 <div class="col-md-2">
                   <input type="number" class="form-control"
-                         ng-model="flair.trades" ng-disabled="flair.sub === 'svexchange'"/>
+                         ng-model="flair.trades" ng-disabled="flair.sub === 'SVExchange'"/>
                 </div>
                 <div class="col-md-2">
                   <input type="number" class="form-control"
-                         ng-model="flair.involvement" ng-disabled="flair.sub === 'svexchange'" />
+                         ng-model="flair.involvement" ng-disabled="flair.sub === 'SVExchange'" />
                 </div>
                 <div class="col-md-2">
                   <input type="number" class="form-control"
