--- a/assets/views/home/reference.ejs
+++ b/assets/views/home/reference.ejs
@@ -32,7 +32,7 @@
         <li class="active"><a href="#references" role="tab" data-toggle="tab">References</a></li>
         <li><a href="#comments" role="tab" data-toggle="tab">Comments ({{refUser.comments.length}})</a></li>
         <li><a href="#info" role="tab" data-toggle="tab">Information</a></li>
-        <li ng-if="user.isMod && user.modPermissions && user.modPermissions.includes('all')"><a href="#modEdit" role="tab" data-toggle="tab">Moderation ({{refUser.modNotes.length}})</a></li>
+        <li ng-if="user.isMod && user.modPermissions && (user.modPermissions.includes('all')  || (user.modPermissions.includes('posts') && user.modPermissions.includes('wiki')))"><a href="#modEdit" role="tab" data-toggle="tab">Moderation ({{refUser.modNotes.length}})</a></li>
       </ul>
 
       <div class="tab-content">
@@ -75,7 +75,7 @@
         <div class="tab-pane" id="info">
           <%- partial('profileInfo.ejs') %>
         </div>
-        <div class="tab-pane" id="modEdit" ng-if="user.isMod && user.modPermissions.includes('all')">
+        <div class="tab-pane" id="modEdit" ng-if="user.isMod && (user.modPermissions.includes('all') || (user.modPermissions.includes('posts') && user.modPermissions.includes('wiki')))">
           <%- partial('modEdit.ejs') %>
         </div>
       </div>
