Fixed unwanted changes

--- a/assets/views/home/info.ejs
+++ b/assets/views/home/info.ejs
@@ -10,10 +10,10 @@
           This is a special website. It was created to scratch an itch. A very niche itch:
           the organisation of references for
           <a href="http://reddit.com/r/pokemontrades">/r/pokemontrades</a>
-          and <a href="http://reddit.com/r/SVExchange">/r/SVExchange</a>.
+          and <a href="http://reddit.com/r/svexchange">/r/svexchange</a>.
 
           <a href="http://reddit.com/r/pokemontrades">/r/pokemontrades</a>
-          and <a href="http://reddit.com/r/SVExchange">/r/SVExchange</a> use reference pages
+          and <a href="http://reddit.com/r/svexchange">/r/svexchange</a> use reference pages
           to determine eligibility for the flair images next to users' names. Here you can
           input all of the trades/hatches you have completed, and then submit your application
           for one of the many flair levels. You can read all about the flair guidelines on
@@ -23,7 +23,7 @@
         <a href="http://reddit.com/r/pokemontrades/wiki/flair">
           <img src="/images/TradeFlairs.png" class="small-image"/>
         </a>
-        <a href="http://reddit.com/r/SVExchange/wiki/flairhq">
+        <a href="http://reddit.com/r/svexchange/wiki/flairhq">
           <img src="/images/HatchFlairs.png" class="small-image"/>
         </a>
 
@@ -39,7 +39,7 @@
         <h3>The Subreddits!</h3>
         <p>
           <a href="http://reddit.com/r/pokemontrades">/r/pokemontrades</a> is a place for trading,
-          and <a href="http://reddit.com/r/SVExchange">/r/SVExchange</a> is a place for hatching
+          and <a href="http://reddit.com/r/svexchange">/r/svexchange</a> is a place for hatching
           shiny eggs. But really, if you don't know about the subs, you should go there first,
           not here. Why are you adding references if you haven't traded there yet?
         </p>
@@ -48,7 +48,7 @@
           <img src="/images/TradeRules.png" class="small-image"/>
         </a>
 
-        <a href="http://reddit.com/r/SVExchange/about/rules">
+        <a href="http://reddit.com/r/svexchange/about/rules">
           <img src="/images/SvExRules.png" class="small-image"/>
         </a>
 
