--- a/assets/views/home/index.ejs
+++ b/assets/views/home/index.ejs
@@ -12,7 +12,7 @@
         <p class="text-center">You can add references to the right, and then they will appear below.</p>
 
         <p class="text-center">If you are unsure what to do, go to <a href="http://www.reddit.com/r/pokemontrades/wiki/flairhq">/r/pokemontrades how to</a>
-           or <a href="https://www.reddit.com/r/SVExchange/wiki/flairhq">/r/SVExchange how to</a>.</p>
+           or <a href="https://www.reddit.com/r/svexchange/wiki/flairhq">/r/svexchange how to</a>.</p>
 
           <p class="text-center">
             <a ng-href="/u/<%= user.name %>" class="btn btn-default">Public Profile</a>
