--- a/assets/views/home/modEdit.ejs
+++ b/assets/views/home/modEdit.ejs
@@ -47,7 +47,7 @@
         <label class="col-sm-3 control-label">Introduction:</label>
 
         <div class="col-md-8">
-          <textarea class="form-control" ng-model="refUser.intro"></textarea>
+          <textarea class="form-control" ng-model="refUser.intro" ng-maxlength="10000" maxlength="10000"></textarea>
         </div>
       </div>
 
